# sisyphus-matroska

./: .gitignore  README.md  matroska.py  mkvextract.py  mkvinfo.py  mkvmerge.py  pyproject.toml  test copy.json  test.json  test.py
schema/: matroska.schema.json  mimetypes.json  mimetypes.schema.json  mkvextract.schema.json  mkvmerge.schema.json
