[tool.poetry]
name = "sisyphus-matroska"
version = "0.9.0"
description = ""
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
readme = "README.md"
packages = [{include = "matroska.py"}]
include = [
    "schema/matroska.schema.json",
    "schema/mimetypes.schema.json"
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
python-box = "^7.0.1"
jsonschema = "^4.19.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
